--- a/login.html
+++ b/login.html
@@ -41,6 +41,8 @@
       </div>
     </main>
     <!--script-->
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js"></script>
     <script src="scripts.js"></script>
   </body>
 </html>
