script link updated

--- a/signup.html
+++ b/signup.html
@@ -68,9 +68,7 @@
       </div>
     </main>
     <!--script-->
-     <script>
-      import { getCurrentUser, login, signup, logout } from "./scripts.js";
-    </script>
+     <script src="scripts.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js"></script>
   </body>
 </html>
