url anchor fixed

--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a href="file:///C:/Users/DHQ/Desktop/tttt/index.html" class="logo"
+    <a href="index.html" class="logo"
       >QUIKData</a
     >
     <main class="auth-page">
